progs/cpp/14164595-fe7e-4f78-a98a-7c7cdae94e68/err.txt
progs/cpp/14164595-fe7e-4f78-a98a-7c7cdae94e68/prog.cpp:5:14: warning: missing terminating " character [enabled by default]
      cout << ";
              ^
progs/cpp/14164595-fe7e-4f78-a98a-7c7cdae94e68/prog.cpp:5:6: error: missing terminating " character
      cout << ";
      ^
progs/cpp/14164595-fe7e-4f78-a98a-7c7cdae94e68/prog.cpp: In function ‘int main()’:
progs/cpp/14164595-fe7e-4f78-a98a-7c7cdae94e68/prog.cpp:6:6: error: expected primary-expression before ‘return’
      return 0;
      ^
progs/cpp/14164595-fe7e-4f78-a98a-7c7cdae94e68/prog.cpp:6:6: error: expected ‘;’ before ‘return’
